--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: Just another website
 logo: /assets/images/logo.png
 favicon: /assets/images/favicon.ico
 paginate: 6
-baseurl:
+baseurl:/lawmaker-network
 email: 'hello@john.doe'
 google_analytics:
 disqus:
