--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site
-name: John Doe
+name: JunSik KIM
 description: Just another website
 meta_description: Just another website
 logo: /assets/images/logo.png
 favicon: /assets/images/favicon.ico
 paginate: 6
-baseurl:/lawmaker-network
+url: "https://wnstlr4580.github.io"
+baseurl: "/lawmaker-network"
 email: 'hello@john.doe'
 google_analytics:
 disqus:
